refactor(rest): change OpenAPI operationId upsertCartItem -> addCartItem
